[13-December-2016 Release 3.5.1]
* A flatlist to get all groups and subgroups
* A flatlist to get all accounts
* A joint table for godown wise opening stock
* Stock quantity in product list
* Alter table for database compatibility
* Modification in product API for adding godown wise opening stock
* Stock report
* Godown wise stock report

[17-November-2016 Release 3.5]
* Addition of support for choosing themes.
* Facility of search in all table views.
* Much awaited inventory module added which includes:
  - Creation of dynamic categories and sub-categories,
  - Creation of products under the categories with custom units of measurement,
  - Creation of customer/supplier and Godown,
  - Generation and printing of Delivery Note,
  - Generation and printing of Invoice,
  - Generation and printing of Cash Memo,
  - Generation and printing of Transfer Note,
  - Complete database backup and restore,
  - Generation and printing of product wise Stock report with spreadsheet option.
  - Generation and printing of godown report with spreadsheet option.
  - Generation and printing of Category wise report with spreadsheet option.
  - Linking of invoice and vouchers.
  - Option to activate inventory module any time in the financial year.

[18-Oct-2016 Release 3.0.1]
* Now the signature generated is a 2560 bits RSA key.

[04-July-2016 Release 3.0]
* Unique feature for attaching official documents with vouchers (invoices, bills etc).
* Running Dr and Cr totals in printed reports like ledger, trial balance, cash flow and project statement.
* Adverse balance indication.
* Refined data structure output for both balance sheet.
* Forgot Password system implemented.
* api now returns the last voucher no. and date for the selected voucher type.
* Minor bug fixes

[18-June-2016 Release 3.0RC]
* Now vouchertype is also sent along with ledger details.
* Added license and authors information.
* Minor bug fixes.


[09-June-2016 Release 3.0 RC]
* Complete revamp for the core API in REST.